resolve horizontal scroll problem

--- a/danslesalgorithmes/public/css/style.css
+++ b/danslesalgorithmes/public/css/style.css
@@ -4,6 +4,12 @@ body, html {
     padding: 0;
     font-family: sans-serif;
     background-color: #f2efe9; 
+    max-width: 100%;
+}
+
+img, video, canvas {
+    max-width: 100%;
+    height: auto;
 }
 
 #scrolly {
